--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,3 +1,21 @@
+// ** Responsiveness of application
+@mixin mobile {
+  @media screen and (max-width:480px){
+    @content;
+  }
+}
+
+@mixin tablet {
+  @media screen and (max-width: 720px) {
+    @content;
+  }
+}
+
+@mixin laptop {
+  @media screen and (max-width: 1080px) {
+    @content;
+  }
+}
 
 /**
 * Todo: styling for Login and Register From component
@@ -237,7 +255,7 @@
       }
 
       // todo: styling for chat panel middle part => all chat texts
-      .messages {
+      .message__container {
         background-color: #ddddf7;
         padding: 10px;
         height: calc(100% - 160px);
@@ -255,6 +273,7 @@
 
         .message {
           display: flex;
+          flex-direction: row;
           gap:20px;
           margin-bottom: 20px;
 
@@ -272,18 +291,33 @@
           }
 
           .message__content{
+            max-width: 80%;
             display: flex;
-
+            flex-direction: column;
+            gap:10px;
             p{
               background-color: #c7c7d4;
-              padding: 10px;
-              border-radius: 0 10px 10px 10px;
+              padding: 10px 20px;
+              border-radius: 0 13px 13px 13px;
+              max-width: max-content;
             }
+            img{ 
+              width: 50%;
+            }
+          }
 
+          &.owner { 
+            flex-direction: row-reverse;
+            .message__content {
+              align-items: flex-end;
+              p {
+                background-color: #629ae4;
+                padding: 10px 20px;
+                border-radius: 13px 0 13px 13px;
+              }
+            }
           }
         }
-       
-
       }
 
 
