--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -97,6 +97,7 @@
     width: 70%;
     border-radius: 10px;
     overflow: hidden;
+
     // Todo: styling for SidebarPanel component 
     .sidebar__panel{
       position: relative;
@@ -113,7 +114,7 @@
         top:0;
         left: 0;
         
-        height: 40px;
+        height: 45px;
         display: flex;
         flex-direction: row;
         align-items: center;
@@ -121,26 +122,22 @@
         background-color: rgb(47, 45, 82);
         color: white;
         padding: 10px;
-        .logo {
-          display: flex;
-          align-items: center;
-          i{font-size: 30px;}
-        }
+    
         .user {
           display: flex;
           flex-direction: row;
           align-items: center;
           column-gap: 15px;
           img {
-            height: 35px;
-            width: 35px;
+            height: 40px;
+            width: 40px;
             border-radius: 50%;
             object-fit: cover;
           }
           span {
             font-size: 17px;
-            font-style: italic;
             text-shadow: 1px 1px 0 #a7bcff;
+            letter-spacing: 1.5px;
           }
           button {
             border: none;
@@ -171,11 +168,12 @@
             color: white;
             &::placeholder{
               color: rgba(197, 189, 189, 0.582);
+              font-size: 13px;
             }
           }
         }
       }
-
+      // todo: styling for chat contacts
       .user__chat{
         display: flex;
         align-items: center;
@@ -188,8 +186,8 @@
         }
 
         img{
-          width: 50px;
-          height: 50px;
+          width: 40px;
+          height: 40px;
           border-radius: 50%;
           object-fit: cover; 
         }
@@ -197,8 +195,7 @@
         .chat__info{
           span {
             font-size: 18px;
-            font-weight: 500;
-            font-style: italic;
+            font-weight: 400;
           }
           p{
             margin: 0;
@@ -235,8 +232,10 @@
             object-fit: cover;
           }
           span{
-            font-weight: 500;
+            font-weight: 550;
             font-size: 18px;
+            text-shadow: 1px 1px 0 #a7bcff;
+            letter-spacing: 1.5px;
           }
         }
 
@@ -250,7 +249,6 @@
             font-size: 20px;
             padding: 5px;
           }
-          
         }
       }
 
@@ -261,12 +259,12 @@
         height: calc(100% - 160px);
         overflow-y: scroll;
         &::-webkit-scrollbar {
-            width: 10px;
+            width: 7px;
             background-color: #ddddf7;
         }
         &::-webkit-scrollbar-thumb {
           background-color:rgb(71, 69, 121);
-          min-height: 30px;
+          min-height: 20px;
           height: 40px;
           border-radius: 5px;
         }
@@ -356,12 +354,12 @@
 
           button {
             padding: 7px 15px;
-            background-color: #88a2fa;
-            color: white;
+            background-color: #2193f0;
+            color: rgb(238, 228, 228);
             border: none;
             border-radius: 5px;
             font-size: 15px;
-            font-weight: 500;
+            font-weight: 700;
             cursor: pointer;
           }
         }
